--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ canvas{
 
 .load-container{
     display:none;
-    transform:translateY(-250px);
+    transform:translateY(100px);
   
 
 }
@@ -111,6 +111,7 @@ canvas{
 /* ANIMATION/LOADER END */
 
 .game-header{
+    margin-top:25px;
     background:linear-gradient(blue,darkblue);
     color:white;
     width:550px;
@@ -131,13 +132,13 @@ canvas{
     color:white;
     text-transform:uppercase;
     letter-spacing:8px;
-    transform:translateY(0px);
     transition:3s;
 
 }
 
 .bye-playerbox{
-    transform:translateY(400px);
+    transform:translateY(400px)
+   
 }
 
 
@@ -189,7 +190,7 @@ canvas{
         margin-top:10px;
     }
     i{
-        margin-left:15px;
+        margin-left:25px;
     }
 
     .score{
