--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-body{
-    background:linear-gradient(#666,#888,#999)
-}
+
 
 canvas{
-    pointer-events:none
+    pointer-events:none;
+ 
 }
 
 .controller{
@@ -20,7 +19,8 @@ canvas{
 .app-container{
     display:flex;
     flex-direction:column;
-    height:100vh;
+    height:100vh;;
+    overflow:none;
     width:100%;
     justify-content:space-evenly;
     align-items:center;
@@ -36,7 +36,7 @@ canvas{
 .gameapp{
     transition:3s;
     opacity:0;
-    display:none;
+  
 }
 
 .see-gameapp{
@@ -114,7 +114,7 @@ canvas{
     margin-top:25px;
     background:linear-gradient(blue,darkblue);
     color:white;
-    width:550px;
+    width:500px;
     height:100px;
     text-transform:uppercase;
     letter-spacing:8px;
@@ -127,17 +127,20 @@ canvas{
 .playerbox{
     width:50%;
     margin:auto;
-    height:400px;
+    height:100%;
     background:linear-gradient(blue,darkblue);
     color:white;
     text-transform:uppercase;
     letter-spacing:8px;
-    transition:3s;
+    transition:1s;
+    position:relative;
+    top:-300px;
 
 }
 
 .bye-playerbox{
-    transform:translateY(400px)
+    transition:1s;
+   opacity:0;
    
 }
 
